Partial_14Dec2021/force-app/main/default/objects/Attendance__c/fields/Email_of_Employee__c.field-meta.xml
<CustomField>
    <fullName>Email_of_Employee__c</fullName>
    <label>Email of Employee</label>
    <type>Email</type>
</CustomField>