Partial_14Dec2021/force-app/main/default/objects/Attendance__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>