Partial_14Dec2021/force-app/main/default/objects/Attendance__c/fields/Employee_Mail_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Mail_Id__c</fullName>
    <formula>Employee__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Mail Id</label>
    <type>Text</type>
</CustomField>