Partial_14Dec2021/force-app/main/default/objects/Attendance__c/fields/In_Time__c.field-meta.xml
<CustomField>
    <fullName>In_Time__c</fullName>
    <label>In Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>