Partial_14Dec2021/force-app/main/default/objects/Attendance__c/fields/Out_Time__c.field-meta.xml
<CustomField>
    <fullName>Out_Time__c</fullName>
    <label>Out Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>