Partial_14Dec2021/force-app/main/default/objects/Attendance__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>Remarks for changing attendance status</description>
    <inlineHelpText>Remarks for changing attendance status</inlineHelpText>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>