Partial_14Dec2021/force-app/main/default/objects/Attendance__c/fields/StatusDaily__c.field-meta.xml
<CustomField>
    <fullName>StatusDaily__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &apos;Present&apos;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StatusDaily</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>