Partial_14Dec2021/force-app/main/default/objects/Attendance__c/fields/Tour_Plan__c.field-meta.xml
<CustomField>
    <fullName>Tour_Plan__c</fullName>
    <label>Tour Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>