Partial_14Dec2021/force-app/main/default/objects/Attendance__c/fields/TourPlanDate__c.field-meta.xml
<CustomField>
    <fullName>TourPlanDate__c</fullName>
    <label>TourPlanDate</label>
    <type>Date</type>
</CustomField>