Partial_14Dec2021/force-app/main/default/objects/Attendance__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <label>Visit Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>