Partial_14Dec2021/force-app/main/default/objects/Attendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Id__c</columns>
    <columns>Employee__c</columns>
    <columns>Employee_Name__c</columns>
    <columns>TourPlanDate__c</columns>
    <columns>Status__c</columns>
    <columns>StatusDaily__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>